[package]
name = "durs-module"
version = "0.3.0-dev"
authors = ["librelois <elois@duniter.org>"]
description = "Modules model for the Duniter project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dup-crypto = { path = "../../crypto" }
dubp-currency-params = { path = "../../dubp/currency-params" }
dubp-user-docs = { path = "../../dubp/user-docs" }
durs-common-tools = { path = "../../tools/common-tools" }
durs-network-documents = { path = "../../dunp/network-documents" }
envy = "0.4.1"
failure = "0.1.5"
log = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.3.4"

[features]
