[package]
name = "durs-network"
version = "0.2.0-a"
authors = ["librelois <elois@duniter.org>"]
description = "Network model for the Durs project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
durs-common-tools = { path = "../../tools/common-tools" }
dup-crypto = { path = "../../tools/crypto" }
dubp-documents= { path = "../../tools/documents" }
durs-module = { path = "../module" }
durs-network-documents = { path = "../../tools/network-documents" }
failure = "0.1.5"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.2.*"

[dev-dependencies]

[features]
