[package]
name = "durs-network"
version = "0.3.0-dev"
authors = ["librelois <elois@duniter.org>"]
description = "Network model for the Dunitrust project."
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
dubp-block-doc = { path = "../../dubp/block-doc"} #, version = "0.1.0" }
dubp-common-doc = { path = "../../dubp/common-doc"} #, version = "0.1.0" }
dubp-user-docs= { path = "../../dubp/user-docs" }
dup-crypto = "0.8.2"
durs-common-tools = { path = "../../tools/common-tools" }
durs-module = { path = "../module" }
durs-network-documents = { path = "../../dunp/network-documents" }
failure = "0.1.5"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
structopt= "0.3.9"

[dev-dependencies]

[features]
