[package]
name = "dubp-common-doc"
version = "0.1.0"
authors = ["elois <elois@ifee.fr>"]
description = "Provide common tools for DUBP (DUniter Blockhain Protocol)."
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
readme = "README.md"
keywords = ["duniter", "dunitrust", "blockchain", "cryptocurrency"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dup-crypto = { path = "../../crypto", version = "0.8.0" }
durs-common-tools = { path = "../../tools/common-tools", version = "0.2.0" }
failure = "0.1.5"
json-pest-parser = { path = "../../tools/json-pest-parser", version = "0.2.0" }
pest = "2.1.0"
pest_derive = "2.1.0"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
shrinkwraprs = "0.3.*"
log = "0.4.*"
unwrap = "1.2.1"

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]