[package]
name = "dubp-currency-params"
version = "0.2.0"
authors = ["elois <elois@ifee.fr>"]
description = "Duniter protocol currency parameters"
repository = "https://git.duniter.org/nodes/rust/duniter-rs"
keywords = ["duniter", "blockchain", "cryptocurrency"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
bincode = "1.0.1"
dubp-common-doc = { path = "../common-doc" } #, version = "0.1.0" }
durs-common-tools = { path = "../../tools/common-tools", version = "0.2.0" }
failure = "0.1.5"
serde = { version = "1.0.*", features = ["derive"] }
